--- a/source/R5T.F0083.R001/Components/App_WebBlazorClient.razor
+++ b/source/R5T.F0083.R001/Components/App_WebBlazorClient.razor
@@ -3,7 +3,7 @@
 
 @Instances.RazorOperator.AsText("<Router AppAssembly=\"@typeof(App).Assembly\">")
     @Instances.RazorOperator.AsText("<Found Context=\"routeData\">")
-        @Instances.RazorOperator.AsText("@<RouteView RouteData=\"@routeData\" DefaultLayout=\"@typeof(MainLayout)\" />")
+        @Instances.RazorOperator.AsText("<RouteView RouteData=\"@routeData\" DefaultLayout=\"@typeof(MainLayout)\" />")
         @*<FocusOnNavigate RouteData="@routeData" Selector="h1" />*@
     @Instances.RazorOperator.AsText("</Found>")
     @Instances.RazorOperator.AsText("<NotFound>")
