--- a/source/R5T.F0083.R001/Components/TailwindConfigJsFile.razor
+++ b/source/R5T.F0083.R001/Components/TailwindConfigJsFile.razor
@@ -3,16 +3,10 @@
 
 /** @@type {import('tailwindcss').Config} */
 
-module.exports = {
-  content: [
-    "./Components/**/*.razor",
-    "./Pages/**/*.razor",
-    "./Shared/**/*.razor",
-    "./wwwroot/**/*.html",
+const content = require('./tailwind.contentpaths.all.json');
 
-    // Add component libraries here.
-    
-  ],
+module.exports = {
+  content: content,
   theme: {
     extend: {},
   },
