--- a/source/R5T.F0083.R001/Components/Class.razor
+++ b/source/R5T.F0083.R001/Components/Class.razor
@@ -2,18 +2,19 @@
 
 @inherits Internal.NamespaceNamedBase
 
-
 using System;
 
 
 namespace @this.NamespaceName
 {
-    class Program
+    public class @this.ClassName
     {
-        static void Main()
-        {
-            Console.WriteLine("Hello World!");
-        }
+
     }
 }
 
+
+@code {
+    [Parameter]
+    public string ClassName { get; set; }
+}
