--- a/source/R5T.F0083.R001/Components/InstancesClass.razor
+++ b/source/R5T.F0083.R001/Components/InstancesClass.razor
@@ -2,18 +2,13 @@
 
 @inherits Internal.NamespaceNamedBase
 
-
 using System;
 
 
 namespace @this.NamespaceName
 {
-    class Program
+    public static class Instances
     {
-        static void Main()
-        {
-            Console.WriteLine("Hello World!");
-        }
+        
     }
 }
-
