--- a/source/R5T.F0083.R001/Components/ProgramFile_WebStaticRazorComponents.razor
+++ b/source/R5T.F0083.R001/Components/ProgramFile_WebStaticRazorComponents.razor
@@ -1,5 +1,7 @@
 ﻿@namespace R5T.F0083.R001
 
+@inherits Internal.NamespaceNamedBase
+
 
 using System;
 
@@ -29,8 +31,3 @@ namespace @this.NamespaceName
     }
 }
 
-
-@code {
-    [Parameter]
-    public string NamespaceName { get; set; }
-}
