--- a/source/R5T.F0083.R001/Components/ProgramFile_DeployScripts.razor
+++ b/source/R5T.F0083.R001/Components/ProgramFile_DeployScripts.razor
@@ -15,6 +15,7 @@ namespace @this.NamespaceName
         {
             // await DeployScripts.Instance.DeployToLocalCloudBinariesDirectory();
             // await DeployScripts.Instance.DeployToRemoteBinariesDirectory();
+            // await DeployScripts.Instance.RunCertbotRenewal();
         }
     }
 }
