--- a/source/R5T.F0083.R001/Components/ProgramFile_WebStaticRazorComponents.razor
+++ b/source/R5T.F0083.R001/Components/ProgramFile_WebStaticRazorComponents.razor
@@ -22,6 +22,8 @@ namespace @this.NamespaceName
 
             var app = builder.Build();
 
+            app.UseStaticFiles();
+
             app.UseRouting();
 
             app.MapFallbackToPage("/_Host");
