--- a/source/R5T.F0083.R001/Components/IndexHtmlFile.razor
+++ b/source/R5T.F0083.R001/Components/IndexHtmlFile.razor
@@ -17,7 +17,7 @@
 
     <div id="blazor-error-ui" style="display:none;">
         An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        <a href="/" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
     <script suppress-error="BL9992" src="_framework/blazor.webassembly.js"></script>
