--- a/source/R5T.F0083.R001/Components/ProgramFile_WebServerForBlazorClient.razor
+++ b/source/R5T.F0083.R001/Components/ProgramFile_WebServerForBlazorClient.razor
@@ -26,7 +26,7 @@ namespace @this.NamespaceName
             }
 
             // Needed, even though a hard-refresh of Chrome after commenting out causes no problems.
-            // The problem occurs when your computer is restated (and thus the Chrome cache is *really* emptied out!). Blazor will not work and the Chrome console will be full of errors.
+            // The problem occurs when your computer is restarted (and thus the Chrome cache is *really* emptied out!). Blazor will not work and the Chrome console will be full of errors.
             app.UseBlazorFrameworkFiles();
 
             // Needed, since the Blazor framework files are serverd as static files. Else, the index.html page just renders as HTML.
