--- a/source/R5T.F0083.R001/Components/StronglyTypedString.razor
+++ b/source/R5T.F0083.R001/Components/StronglyTypedString.razor
@@ -13,8 +13,7 @@ namespace @this.NamespaceName
 {
     /// <summary>
     /// @this.Description
-    ///
-</summary>
+    /// </summary>
     [@(this.DraftString)StrongTypeMarker]
     public class @this.TypeName : TypedString, I@(this.DraftString)StrongTypeMarker
     {
