--- a/source/R5T.F0083.R001/Components/App_WebBlazorClient.razor
+++ b/source/R5T.F0083.R001/Components/App_WebBlazorClient.razor
@@ -3,12 +3,12 @@
 
 @Instances.RazorOperator.AsText("<Router AppAssembly=\"@typeof(App).Assembly\">")
     @Instances.RazorOperator.AsText("<Found Context=\"routeData\">")
-        @Instances.RazorOperator.AsText("<RouteView RouteData=\"@routeData\" DefaultLayout=\"@typeof(MainLayout)\" />")
+        @Instances.RazorOperator.AsText("<RouteView RouteData=\"@routeData\" DefaultLayout=\"@typeof(Layouts.Layout)\" />")
         @*<FocusOnNavigate RouteData="@routeData" Selector="h1" />*@
     @Instances.RazorOperator.AsText("</Found>")
     @Instances.RazorOperator.AsText("<NotFound>")
         @Instances.RazorOperator.AsText("<PageTitle>Not found</PageTitle>")
-        @Instances.RazorOperator.AsText("<LayoutView Layout=\"@typeof(MainLayout)\">")
+        @Instances.RazorOperator.AsText("<LayoutView Layout=\"@typeof(Layouts.Layout)\">")
             <p role="alert">Sorry, there's nothing at this address.</p>
         @Instances.RazorOperator.AsText("</LayoutView>")
     @Instances.RazorOperator.AsText("</NotFound>")
