--- a/source/R5T.F0083.R001/Components/Index_WebBlazorClient.razor
+++ b/source/R5T.F0083.R001/Components/Index_WebBlazorClient.razor
@@ -1,12 +1,29 @@
 ﻿@namespace R5T.F0083.R001
 
+@inherits R001.Internal.NamespaceNamedBase
 
-@Instances.RazorOperator.AsText("@page \"/\"")
 
-@Instances.RazorOperator.AsText("<PageTitle>Index</PageTitle>")
+@Instances.RazorOperator.AsText($@"
+@page ""/""
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+@using {this.NamespaceName}.Layouts
 
-<p>Test01 link: <a href="Test01">Test01</a></p>
+
+<Layout>
+    <Head>
+        <meta name=""author"" content=""David Coats"">
+    </Head>
+    <Body>
+        <PageTitle>Index</PageTitle>
+
+        <h1>Hello, world!</h1>
+
+        Welcome to your new app.
+
+        <p>Test01 link: <a href=""Test01"">Test01</a></p>
+
+        <p>Another paragraph.</p>
+    </Body>
+</Layout>
+")
