--- a/source/R5T.F0083.R001/Components/InstanceInterface.razor
+++ b/source/R5T.F0083.R001/Components/InstanceInterface.razor
@@ -19,7 +19,7 @@ using System;
 namespace @this.NamespaceName
 {
     [@this.MarkerAttributeName]
-    public partial interface @this.InterfaceName : @this.MarkerInterfaceTypeName
+    public partial interface @this.InterfaceName
     {
 
     }
@@ -41,7 +41,4 @@ namespace @this.NamespaceName
 
     [Parameter]
     public string InterfaceName { get; set; }
-
-    [Parameter]
-    public string MarkerInterfaceTypeName { get; set; }
 }
